--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -33,14 +33,19 @@
       <%= @book.summary %>
     </p>
 
-    <%= form_tag("/reviews", method: 'post') do %>
-      <h3>Add Your Review</h3>
-      <p>
-        <%= label_tag :rating %>
-        <%= select_tag :rating, options_for_select([1,2,3,4,5]), prompt: "Select 1 to 5...", class: '' %>
-      </p>
-      <p><%= text_area_tag :content, "", rows: 3, class: 'form-control' %></p>
-      <%= submit_tag "Submit", class: 'btn btn-primary' %>
+    <% if session["user_id"].present? %>
+      <%= form_tag("/reviews", method: 'post') do %>
+        <% hidden_field_tag :book_id, @book.id %>
+        <h3>Add Your Review</h3>
+        <p>
+          <%= label_tag :rating %>
+          <%= select_tag :rating, options_for_select([1,2,3,4,5]), prompt: "Select 1 to 5...", class: '' %>
+        </p>
+        <p><%= text_area_tag :content, "", rows: 3, class: 'form-control' %></p>
+        <%= submit_tag "Submit", class: 'btn btn-primary' %>
+      <% end %>
+    <% else %>
+      <p><%= link_to "Sign in to write a review", '/sessions/new' %></p>
     <% end %>
   </div>
 
@@ -48,16 +53,20 @@
 <div class="row">
   <div class="col-sm-12">
 
-    <hr>
-    <h3>Reviews</h3>
-    <p>&bigstar;&bigstar;&bigstar;&star;&star;</p>
-    <p>
-      It's OK. Lacks some character development. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    </p>
+    <h3> Reviews </h3>
 
-    <p>&bigstar;&bigstar;&bigstar;&bigstar;&bigstar;</p>
-    <p>
-      HIGHLY RECOMMEND!!!! Great read. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    </p>
+    <% @reviews.each do |review| %>
+      <p>
+        <% review.rating.to_i.times do |n| %>
+          &bigstar;
+        <% end %>
+        <% 5 - review.rating.to_i.times do |n| %>
+          &star;
+        <% end %>
+      </p>
+      <p>
+        <%= review.content %>
+      </p>
+    <% end %>
   </div>
 </div>
