--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -19,7 +19,7 @@
 
     <div class="form-group">
       <%= label_tag :password, "Pick a Password" %>
-      <%= text_field_tag :password, "", class: 'form-control' %>
+      <%= password_field_tag :password, "", class: 'form-control' %>
     </div>
 
     <%= submit_tag "Sign Up", class: 'btn btn-success btn-lg'%>
