--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,6 +1,33 @@
+<style>
+  /* navbar */
+  .navbar-default {
+      background-color: #346047;
+      border-color: #E7E7E7;
+  }
+
+  /* Title */
+  .navbar-default .navbar-brand {
+      color: #fff;
+  }
+
+  .navbar-default .navbar-brand:hover,
+  .navbar-default .navbar-brand:focus {
+      background-color: #87b79c;
+  }
+
+  /* Link */
+  .navbar-default .navbar-nav > li > a {
+      color: #fff;
+  }
+  .navbar-default .navbar-nav > li > a:hover,
+  .navbar-default .navbar-nav > li > a:focus {
+      background-color: #87b79c;
+  }
+
+</style>
 <nav class="navbar navbar-default">
   <div class="container">
-    <!-- Brand and toggle get grouped for better mobile display -->
+
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-section" aria-expanded="false">
         <span class="icon-bar"></span>
@@ -10,7 +37,6 @@
       <%= link_to "The Awesome Book Database", "/", class: "navbar-brand" %>
     </div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="navbar-collapse-section">
       <ul class="nav navbar-nav">
         <li><%= link_to 'Books', '/books' %></a></li>
