Updated validations, modified models, created alerts

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -28,8 +28,7 @@
               Written By: <%= b.author %>
             </p>
             <p class="genre">Genre: <i><%= b.genre %></i></p>
-            <p><a href="#" class="btn btn-primary" role="button">Add to List</a>
-            </p>
+            <!-- <p><a href="#" class="btn btn-primary" role="button">Add to List</a></p> -->
           </div>
         </div>
       </div>
