--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>The Awesome Book Database</title>
+    <title>Book-ipedia</title>
     <%= csrf_meta_tags %>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -33,8 +33,8 @@
       </div>
     <% end %>
     <div class = "container">
-      <h4> Welcome to the Awesome Books Database! </h4>
-      <p class = "intro"> We are a community of people who love to read.<br>Feel free to browse the books, contribute your own books to the database, add your own reviews, and organize your book lists! </p>
+      <h4> Welcome to Book-ipedia! </h4>
+      <p class = "intro"> We are a community of people who love to read.<br>Feel free to browse the books, contribute your own books to the database, and add your own reviews! </p>
     </div>
     <hr>
     <div class="container">
