--- a/app/views/user_stories/index.html.erb
+++ b/app/views/user_stories/index.html.erb
@@ -8,14 +8,11 @@
   <li>As a visitor, I want to see what books are in the database.</li>
   <li>As a visitor, I want to click on a book to see its details.</li>
   <li>As a visitor, I want to read the reviews for each book.</li>
-  <li>As a visitor, I want to see the average review rating of each book.</li>
-  <li>As a visitor, I want to sign up for a free account so that I can add books to my Reading List</li>
+  <li>As a visitor, I want to sign up for a free account so that I can write reviews.</li>
+  <li>As a visitor, I want to sign up for a free account so that I can delete books.</li>
   <li>As a user, I want to review a book.</li>
-  <li>As a user, I want to delete a review that I wrote.</li>
-  <li>As a user, I want to add a book to my Reading List.</li>
-  <li>As a seller, I want to modify my books's title, author, photo, summary, and/or genre.</li>
-  <li>As a seller, I want to delete a book.</li>
-  <li>As a buyer, I want to see my Reading List.</li>
+  <li>As a user, I want to modify a books's title, author, photo, summary, and/or genre.</li>
+  <li>As a user, I want to delete a book.</li>
 </ol>
 
 
@@ -23,6 +20,7 @@
 
 <ol>
   <li>A review consists of a star rating from 1 to 5 and some text.</li>
-  <li>Adding a book to the Reading List adds the book to Favorites.</li>
+  <li>A visitor cannot delete books.</li>
+  <li>A visitor cannot write reviews.</li>
   <li>Passwords must be encrypted.</li>
 </ol>
