--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -27,7 +27,7 @@
 
     <div class="form-group">
       <%= label_tag :author, "Author" %>
-      <%= number_field_tag :author, @book.author, class: 'form-control' %>
+      <%= text_field_tag :author, @book.author, class: 'form-control' %>
     </div>
 
     <div class="form-group">
