--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -34,7 +34,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to "The Awesome Book Database", "/", class: "navbar-brand" %>
+      <%= link_to "BOOKIPEDIA", "/", class: "navbar-brand" %>
     </div>
 
     <div class="collapse navbar-collapse" id="navbar-collapse-section">
