--- a/app/views/user_stories/index.html.erb
+++ b/app/views/user_stories/index.html.erb
@@ -8,6 +8,7 @@
   <li>As a visitor, I want to see what books are in the database.</li>
   <li>As a visitor, I want to click on a book to see its details.</li>
   <li>As a visitor, I want to read the reviews for each book.</li>
+  <li>As a visitor, I want to see the stars for each review for each book.</li>
   <li>As a visitor, I want to sign up for a free account so that I can write reviews.</li>
   <li>As a visitor, I want to sign up for a free account so that I can delete books.</li>
   <li>As a user, I want to review a book.</li>
